<resources>
    <string name="back_button_desc">Go back</string>
    <string name="planner_title">Workout Planner</string>
    <string name="tasks_title">Daily Tasks</string>
    <string name="add_task_button_desc">Add new task or workout to the selected day</string>
    <string name="exit_button_desc">Exit training registration</string>
    <string name="paused_training_status">TRAINING PAUSED</string>
    <string name="metric_pace_title">Pace</string>
    <string name="metric_distance_title">Distance traveled</string>
    <string name="metric_elevation_title">Positive elevation gain</string>
    <string name="average_pace_per_km_title">Average Pace per KM</string>
    <string name="button_start_text">START</string>
    <string name="button_pause_text">PAUSE</string>
    <string name="button_finish_text">FINISH TRAINING</string>
    <string name="request_unread_indicator_desc">Unread request indicator</string>
    <string name="request_profile_image_desc">Requester\'s profile picture</string>
    <string name="placeholder_user_name">User Name</string>
    <string name="request_status_follow">Requested to follow you / You requested to follow</string>
    <string name="button_reject_text">Reject</string>
    <string name="button_accept_text">Accept</string>
    <string name="trophy_icon_desc">Trophy icon</string>
    <string name="placeholder_trophy_title">Trophy Name</string>
    <string name="placeholder_trophy_description">Trophy Description</string>
    <string name="user_profile_image_desc">User profile picture</string>
    <string name="placeholder_user_full_name">First Name Last Name</string>
    <string name="placeholder_friends_count">Following 5 friends</string>
    <string name="button_follow_text">Follow</string>
    <string name="friends_header_title">Friends</string>
    <string name="search_friends_hint">Search friends by name...</string>
    <string name="profile_title">Profile</string>
    <string name="user_name_placeholder">User Name</string>
    <string name="user_info_placeholder">Profile Info</string>
    <string name="streak_icon_desc">Streak days icon</string>
    <string name="streak_days_label"> day streak</string>
    <string name="max_streak_label">Max Streak: </string>
    <string name="max_streak_days_placeholder">15 days</string>
    <string name="latest_activities_title">Latest Activities</string>
    <string name="activity_distance_placeholder">5.2 km - Run</string>
    <string name="activity_time_placeholder">Time: 30:00</string>
    <string name="activity_pace_placeholder">Pace: 5:46 /km</string>
    <string name="no_activities_message">No recent activities.</string>
    <string name="achievements_title">Achievements</string>
    <string name="trophies_grid_desc">Trophy grid</string>
    <string name="statistics_title">Statistics</string>
    <string name="stat_total">Total</string>
    <string name="stat_year">Year</string>
    <string name="stat_month">Month</string>
    <string name="stat_activity_label">Activity</string>
    <string name="stat_distance_label">Kilometers</string>
    <string name="stat_time_label">Time</string>
    <string name="stat_elevation_label">Elevation</string>
    <string name="chart_title">Activity Graph</string>
    <string name="privacy_message">Private profile. You need to follow this user to see their information.</string>
    <string name="profile_screen_title">My Profile</string>
    <string name="content_description_achievements_button">Achievements button</string>
    <string name="content_description_edit_profile">Edit profile information</string>
    <string name="content_description_streak_icon">Workout streak days icon</string>
    <string name="placeholder_user_name_profile">FitVera User</string>
    <string name="placeholder_user_details_profile">Amateur runner, 20 years old</string>
    <string name="placeholder_streak_current">0</string>
    <string name="label_days">days</string>
    <string name="placeholder_max_streak">Max Streak: 0 days</string>
    <string name="placeholder_max_streak_zero">Max Streak: 0 days</string>
    <string name="placeholder_followers_count">0 Followers</string>
    <string name="message_pending_invitation">0 Following</string>
    <string name="section_title_statistics">Statistics</string>
    <string name="table_header_total">Total</string>
    <string name="table_header_year">Year</string>
    <string name="table_header_month">Month</string>
    <string name="statistic_label_activity">Workouts</string>
    <string name="statistic_label_distance">Distance (km)</string>
    <string name="statistic_label_time">Time (h)</string>
    <string name="statistic_label_elevation">Elevation (m)</string>
    <string name="section_title_activity_graph">Monthly Progress</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="edit_profile_picture_description">Change profile picture</string>
    <string name="profile_name_hint">Full Name</string>
    <string name="profile_gender_label">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="profile_age_hint">Age</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="follow_requests_title">Requests</string>
    <string name="task_title_required_hint">Task Title (Required)</string>
    <string name="task_description_optional_hint">Description (Optional)</string>
    <string name="back_button_description">Back button</string>
    <string name="my_trainings_title">My Trainings</string>
    <string name="search_trainings_hint">Search trainings...</string>
    <string name="add_new_training_button">Add New Training</string>
    <string name="ranking_general_title">General Ranking</string>
    <string name="ranking_metric_pace">Pace</string>
    <string name="ranking_metric_distance">Distance</string>
    <string name="ranking_metric_activities">Activities</string>
    <string name="time_scope_month">Month</string>
    <string name="time_scope_year">Year</string>
    <string name="time_scope_total">Total</string>
    <string name="alerts_title">Alerts</string>
    <string name="training_details_title">Training Details</string>
    <string name="chart_pace_title">Pace Graph</string>
    <string name="metric_time">Time</string>
    <string name="metric_distance">Distance</string>
    <string name="metric_elevation">Elevation</string>
    <string name="metric_calories">Calories</string>
    <string name="metric_difficulty">Difficulty</string>
    <string name="icon_time_description">Time icon</string>
    <string name="icon_distance_description">Distance icon</string>
    <string name="icon_pace_description">Pace icon</string>
    <string name="icon_elevation_description">Elevation icon</string>
    <string name="icon_calories_description">Calories icon</string>
    <string name="icon_difficulty_description">Difficulty icon</string>
    <string name="placeholder_training_name">Morning Run</string>
    <string name="placeholder_training_date">Nov 27, 2025 at 10:00 AM</string>
    <string name="placeholder_time_value">00:35:15</string>
    <string name="placeholder_distance_value">5.00 km</string>
    <string name="placeholder_pace_value">7:03 /km</string>
    <string name="placeholder_elevation_value">150 m</string>
    <string name="placeholder_calories_value">350 kcal</string>
    <string name="placeholder_difficulty_value">Moderate</string>
    <string name="home_card_title">Ready to Train?</string>
    <string name="home_card_subtitle">Log your activities and track your progress.</string>
    <string name="button_get_started">Get Started</string>
    <string name="menu_plan">Plan</string>
    <string name="menu_register">Register</string>
    <string name="menu_trainings">Training</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_logout">Log Out</string>
    <string name="icon_plan_description">Planning icon</string>
    <string name="icon_register_description">Register training icon</string>
    <string name="icon_trainings_description">Training history icon</string>
    <string name="icon_achievements_description">Achievements icon</string>
    <string name="icon_ranking_description">Ranking icon</string>
    <string name="icon_logout_description">Logout icon</string>
    <string name="training_analysis_title">Training Analysis</string>
    <string name="training_map_description">Map of the training route</string>
    <string name="chart_pace_segment_title">Pace per Segment</string>
    <string name="metric_pace_short">Pace</string>
    <string name="metric_elevation_short">Elevation</string>
    <string name="metric_calories_short">Calories</string>
    <string name="label_training_name">Training Name</string>
    <string name="hint_training_name">Give your training a name</string>
    <string name="label_add_photo">Add Photo</string>
    <string name="training_photo">Training photo</string>
    <string name="add_photo_description">Add or change training photo</string>
    <string name="label_difficulty_level">Difficulty Level</string>
    <string name="difficulty_zone_1">Easy</string>
    <string name="difficulty_zone_2">Moderate</string>
    <string name="difficulty_zone_3">Hard</string>
    <string name="difficulty_zone_4">Intense</string>
    <string name="difficulty_zone_5">Extreme</string>
    <string name="button_save_training">Save Training</string>
    <string name="button_accept">Accept</string>
    <string name="button_deny">Reject</string>
    <string name="placeholder_task_title">Complete 5km Run</string>
    <string name="placeholder_task_description">Maintain a pace under 6:00/km</string>
    <string name="button_edit_task_description">Edit task button</string>
    <string name="button_delete_task_description">Delete task button</string>
    <string name="icon_profile_description">User profile picture</string>
    <string name="placeholder_user_details">150 km this month</string>
    <string name="button_unfollow_description">Unfollow user button</string>
    <string name="auth_screen_app_title">Running Cup</string>
    <string name="content_description_logo">App logo</string>
    <string name="hint_username_auth">Username</string>
    <string name="hint_password_auth">Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_error_message">Invalid credentials. Please try again.</string>
    <string name="button_login">Log In</string>
    <string name="button_register">Register</string>
    <string name="button_login_google">Continue with Google</string>
    <string name="button_exit_app">Exit App</string>
    <string name="screen_title_users">Social</string>
    <string name="content_description_notifications">Notifications button</string>
    <string name="icon_search_description">Search icon</string>
    <string name="hint_search_users">Search for users...</string>
    <string name="section_title_recommended_users">Recommended Users</string>
    <string name="content_description_back_trophies">Back to previous screen</string>
    <string name="screen_title_trophy_showcase">Achievements</string>
    <string name="message_no_trophies">No achievements earned yet. Keep training!</string>
    <string name="content_description_back_desafios">Back to previous screen</string>
    <string name="title_select_source">Select your data source</string>
    <string name="btn_google_fit">Google Fit</string>
    <string name="btn_strava">Strava</string>
    <string name="label_import_training">Workout Import</string>
    <string name="content_description_health_icon">Health Icon</string>
    <string name="congrats_header">CONGRATULATIONS!</string>
    <string name="trophy_title_placeholder">Trophy Title</string>
    <string name="congrats_button">Great!</string>
</resources>