<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="left|top"

        android:padding="8dp">

        <ImageView
            android:id="@+id/trophy_image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/trofeocuatro"
            android:contentDescription="@string/trophy_icon_desc"

            android:layout_gravity="left" />

        <TextView
            android:id="@+id/trophy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"

            android:gravity="left"

            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/placeholder_trophy_title" />

        <TextView
            android:id="@+id/trophy_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="left"

            android:textSize="10sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/placeholder_trophy_description" />
    </LinearLayout>
</androidx.cardview.widget.CardView>